--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
