--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "env": "^0.0.2",
-    "firebase-admin": "^11.8.0",
+    "firebase": "^10.8.1",
+    "firebase-admin": "^11.11.1",
     "firebase-functions": "^4.7.0",
+    "jest": "^29.7.0",
     "stripe": "^14.19.0"
   },
   "devDependencies": {
