--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.7.0",
