--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-router": "^6.22.3",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.2.3",
     "react-scripts": "^5.0.1",
     "sass": "^1.69.5",
     "serve": "^14.2.1",
