--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "crwn-clothing",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "21.6.2"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
