--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "sass": "^1.69.5",
     "serve": "^14.2.1",
     "web-vitals": "^2.1.4"
-  },
+  }, 
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
+    "dev": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
